# GenML

./: CMakeLists.txt  library.cpp  library.h
Activation/: activation.cpp  activation.h
Layers/: input.cpp  layers.h  liner.cpp
Math/: linalg.h
Model/: models.h
Neuron/: neuron.cpp  neuron.h
Tensor/: scalar.cpp  scalar.h  tensor.cpp  tensor.h  vector.cpp  vector.h
